--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 bin/Debug/SEYC.exe
 bin/Debug/SEYC.pdb
 bin/Debug/SEYC.vshost.exe.manifest
+bin/Debug/SEYC.pdb
+bin/Debug/SEYC.exe
+obj/Debug/SEYC.frmClientes2.resources
+obj/Debug/DesignTimeResolveAssemblyReferences.cache
