--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ bin/Debug/SEYC.pdb
 bin/Debug/SEYC.exe
 obj/Debug/SEYC.frmClientes2.resources
 obj/Debug/DesignTimeResolveAssemblyReferences.cache
+Utiles/obj/Debug/Utiles.dll
+obj/Debug/DesignTimeResolveAssemblyReferences.cache
+obj/Debug/CENPROFAR.vbproj.ResolveComReference.cache
+CENPROFAR.vbproj
+CENPROFAR.v11.suo
+bin/Debug/SEYC.pdb
+bin/Debug/SEYC.exe
