--- a/CENPROFAR.vbproj
+++ b/CENPROFAR.vbproj
@@ -117,6 +117,12 @@
     </Compile>
     <Compile Include="ApplicationEvents.vb" />
     <Compile Include="CommManager.vb" />
+    <Compile Include="frmClientes2.designer.vb">
+      <DependentUpon>frmClientes2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmClientes2.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmRecepciones.Designer.vb">
       <DependentUpon>frmRecepciones.vb</DependentUpon>
     </Compile>
@@ -755,6 +761,9 @@
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmClientes2.resx">
+      <DependentUpon>frmClientes2.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRecepciones.resx">
       <DependentUpon>frmRecepciones.vb</DependentUpon>
